[project]
name = "llm-tools-exa"
version = "0.3.0"
description = "A tool plugin for LLM to enable web search with Exa"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Dan Turkel", email = "daturkel@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "exa-py>=1.13.1",
    "llm>=0.26a1",
]

[project.entry-points.llm]
llm_tools_exa = "llm_tools_exa"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]
